--- a/src/styles/theme/button.less
+++ b/src/styles/theme/button.less
@@ -23,6 +23,21 @@
 @button-text-color:                             @global-emphasis-color;
 @button-text-hover-color:                       @global-emphasis-color;
 
+@button-primary-background:                     @global-primary-background;
+@button-primary-color:                          @global-color;
+@button-primary-hover-background:               lighten(@button-primary-background, 15%);
+@button-primary-hover-color:                    @global-color;
+@button-primary-active-background:              lighten(@button-primary-background, 15%);
+@button-primary-active-color:                   @global-color;
+
+@button-secondary-background:                   @global-secondary-background;
+@button-secondary-color:                        @global-inverse-color;
+@button-secondary-hover-background:             darken(@button-secondary-background, 5%);
+@button-secondary-hover-color:                  @global-inverse-color;
+@button-secondary-active-background:            darken(@button-secondary-background, 10%);
+@button-secondary-active-color:                 @global-inverse-color;
+
+
 //
 // New
 //
