--- a/src/styles/theme/card.less
+++ b/src/styles/theme/card.less
@@ -7,6 +7,9 @@
 // Variables
 // ========================================================================
 
+@card-small-body-padding-horizontal:           @global-margin;
+@card-small-body-padding-vertical:             @global-margin;
+
 @card-hover-background:                        @global-background;
 
 @card-default-background:                      @global-background;
