--- a/src/styles/theme/close.less
+++ b/src/styles/theme/close.less
@@ -7,6 +7,8 @@
 // Variables
 // ========================================================================
 
+@close-color:                                   @global-color;
+@close-hover-color:                             @global-emphasis-color;
 
 // Component
 // ========================================================================
