--- a/src/styles/theme/container.less
+++ b/src/styles/theme/container.less
@@ -7,6 +7,9 @@
 // Variables
 // ========================================================================
 
+@container-padding-horizontal:          15px;
+@container-padding-horizontal-s:        15px;
+@container-padding-horizontal-m:        15px;
 
 // Miscellaneous
 // ========================================================================
