--- a/src/styles/theme/navbar.less
+++ b/src/styles/theme/navbar.less
@@ -7,12 +7,18 @@
 // Variables
 // ========================================================================
 
+@navbar-background:                             @global-primary-background;
+
 @navbar-nav-item-font-size:                     @global-small-font-size;
 
+@navbar-nav-item-height:                        60px;
 @navbar-dropdown-margin:                        15px;
 @navbar-dropdown-padding:                       25px;
 @navbar-dropdown-background:                    @global-background;
 @navbar-dropdown-grid-gutter-horizontal:        (@navbar-dropdown-padding * 2);
+
+@navbar-toggle-color:                           @global-color;
+@navbar-toggle-hover-color:                     @global-emphasis-color;
 
 //
 // New
