--- a/src/styles/theme/offcanvas.less
+++ b/src/styles/theme/offcanvas.less
@@ -7,11 +7,22 @@
 // Variables
 // ========================================================================
 
+@offcanvas-bar-background:                      @global-primary-background;
+@offcanvas-bar-color-mode:                      dark;
 
 // Bar
 // ========================================================================
 
-.hook-offcanvas-bar() {}
+.hook-offcanvas-bar() {
+
+  a {
+    color: @global-color;
+
+    &:hover {
+      color: @global-emphasis-color;
+    }
+  }
+}
 
 
 // Close
