--- a/src/styles/theme/utility.less
+++ b/src/styles/theme/utility.less
@@ -7,6 +7,11 @@
 // Variables
 // ========================================================================
 
+@logo-font-size:                                @global-large-font-size;
+@logo-font-family:                              @global-font-family;
+@logo-color:                                    @global-color;
+@logo-hover-color:                              @global-color;
+
 
 // Panel
 // ========================================================================
@@ -32,7 +37,9 @@
 // Logo
 // ========================================================================
 
-.hook-logo() {}
+.hook-logo() {
+    text-transform: uppercase;
+}
 
 .hook-logo-hover() {}
 
