--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -138,15 +138,11 @@ body ::-webkit-scrollbar-thumb:hover {
 
 @media (max-width: 639px) {
 
-  .top-line {
-
-
-    .uk-button-group {
-      flex-wrap: wrap;
-    }
-  }
-
   .toogle-bar .uk-card {
     max-height: 100%;
+  }
+
+  .sidebar {
+    max-width: 315px;
   }
 }
