--- a/src/styles/theme/utility.less
+++ b/src/styles/theme/utility.less
@@ -7,7 +7,7 @@
 // Variables
 // ========================================================================
 
-@logo-font-size:                                @global-large-font-size;
+@logo-font-size:                                22px;
 @logo-font-family:                              @global-font-family;
 @logo-color:                                    @global-color;
 @logo-hover-color:                              @global-color;
@@ -38,6 +38,7 @@
 // ========================================================================
 
 .hook-logo() {
+    font-weight: 700;
     text-transform: uppercase;
 }
 
