--- a/src/styles/theme/variables.less
+++ b/src/styles/theme/variables.less
@@ -66,7 +66,7 @@
 @global-secondary-background:                   #ddd;
 
 @global-success-background:                     #01aa01;
-@global-warning-background:                     #faa05a;
+@global-warning-background:                     #fa9126;
 @global-danger-background:                      #c10000;
 
 //
