--- a/src/styles/theme/base.less
+++ b/src/styles/theme/base.less
@@ -7,6 +7,10 @@
 // Variables
 // ========================================================================
 
+@base-heading-font-family:                      @global-font-family;
+@base-heading-font-weight:                      normal;
+@base-heading-color:                            @global-emphasis-color;
+
 //
 // New
 //
