--- a/src/styles/theme/card.less
+++ b/src/styles/theme/card.less
@@ -3,6 +3,8 @@
 //
 // ========================================================================
 
+@card-default-title-color:                     @global-color;
+
 
 // Variables
 // ========================================================================
